<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.auth_fragments.register_fragment.RegisterFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="83dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/custom_caps_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/sf_ui_bold"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="30dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_registration" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_name"
        style="@style/auth_edt_styles"
        android:layout_marginTop="28.5dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:hint="@string/name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_phone"
        style="@style/auth_edt_styles"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10dp"
        android:hint="@string/phone_number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password"
        style="@style/auth_edt_styles"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password_confirm"
        style="@style/auth_edt_styles"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="56dp"
        android:paddingVertical="19dp"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:cornerRadius="60dp" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2">

        <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/facebook_social"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="70dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/google_social"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</LinearLayout>