<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.auth_fragments.restore_password_fragment.RestorePasswordFragment"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="83dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/custom_caps_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/sf_ui_bold"
        android:text="@string/restore_password"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_phone"
        style="@style/auth_edt_styles"
        android:layout_marginTop="28.5dp"
        android:hint="@string/_996_788_999_555"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_restore"
        app:prefixText="+996" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/restore_kod_message"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_phone"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="85dp"
        android:paddingVertical="19dp"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>