<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth_fragments.begin_fragment.BeginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="83dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:elevation="1dp"
        android:src="@drawable/custom_caps_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="30dp"
        android:elevation="1dp"
        android:fontFamily="@font/sf_ui_black"
        android:text="@string/custom_caps"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <ImageView
        android:id="@+id/back_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_back_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_iv"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/white"
            android:paddingVertical="19dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="60dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="11dp"
            android:backgroundTint="@color/few_transparent"
            android:paddingVertical="19dp"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="60dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>